fixed the color of the lines not showing up in light theme

--- a/w3.css
+++ b/w3.css
@@ -235,6 +235,10 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-border-dark-grey,.w3-hover-border-dark-grey:hover,.w3-border-dark-gray,.w3-hover-border-dark-gray:hover{border-color:#616161!important}
 .w3-border-pale-red,.w3-hover-border-pale-red:hover{border-color:#ffe7e7!important}.w3-border-pale-green,.w3-hover-border-pale-green:hover{border-color:#e7ffe7!important}
 .w3-border-pale-yellow,.w3-hover-border-pale-yellow:hover{border-color:#ffffcc!important}.w3-border-pale-blue,.w3-hover-border-pale-blue:hover{border-color:#e7ffff!important}
+
+        hr.dynamic {
+                border: 1px solid lightgrey;
+        }
 @media (prefers-color-scheme: dark) {
   body {
     color: #e8e8e8;
@@ -254,5 +258,8 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   }
   a {
     color: #809fff;
+  }
+  hr.dynamic{
+                border: 1px solid rgb(189, 189, 189);
   }
 }
